// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PinoLoggerOptionsBuilder must build options with defaults 1`] = `
{
  "base": {
    "env": "test",
    "hostname": "host",
    "name": "name",
    "pid": 123456,
    "version": "version",
  },
  "formatters": {
    "level": [Function],
  },
  "hooks": {
    "logMethod": [Function],
  },
  "level": "info",
  "redact": [
    "req.headers.authorization",
    "err.config.headers['x-api-key']",
  ],
  "serializers": {
    "err": [Function],
    "req": [Function],
    "res": [Function],
  },
  "timestamp": [Function],
  "transport": undefined,
}
`;

exports[`PinoLoggerOptionsBuilder must build options without defaults 1`] = `
{
  "base": {},
  "formatters": {
    "level": [Function],
  },
  "hooks": {
    "logMethod": [Function],
  },
  "level": "info",
  "redact": [],
  "serializers": {},
  "timestamp": [Function],
  "transport": undefined,
}
`;

exports[`PinoLoggerOptionsBuilder must log custom error 1`] = `
{
  "env": "test",
  "err": "some error",
  "hostname": "host",
  "level": "error",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log error 1`] = `
{
  "env": "test",
  "err": {
    "message": "some error",
    "stack": "Error: some error",
    "type": "Error",
  },
  "errHash": "932f64f7",
  "hostname": "host",
  "level": "error",
  "msg": "some error",
  "msgTemplateHash": "7611b3bb",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log error with custom message 1`] = `
{
  "env": "test",
  "err": {
    "message": "some error",
    "stack": "Error: some error",
    "type": "Error",
  },
  "errHash": "932f64f7",
  "hostname": "host",
  "level": "error",
  "msg": "custom message",
  "msgTemplateHash": "90c7844f",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log error with extra undefined argument 1`] = `
{
  "context": "some context",
  "env": "test",
  "err": {
    "message": "some error",
    "stack": "Error: some error",
    "type": "Error",
  },
  "errHash": "932f64f7",
  "hostname": "host",
  "level": "error",
  "msg": "some error",
  "msgTemplateHash": "7611b3bb",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log error without trace 1`] = `
{
  "env": "test",
  "err": {
    "message": "some error",
    "stack": "",
    "type": "Error",
  },
  "errHash": "0",
  "hostname": "host",
  "level": "error",
  "msg": "some error",
  "msgTemplateHash": "7611b3bb",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log message 1`] = `
{
  "env": "test",
  "hostname": "host",
  "level": "info",
  "msg": "hello",
  "msgTemplateHash": "248bfa47",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log message with args 1`] = `
{
  "env": "test",
  "hostname": "host",
  "level": "info",
  "msg": "hello world",
  "msgTemplateHash": "3504eb44",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log object 1`] = `
{
  "a": 1,
  "env": "test",
  "hostname": "host",
  "level": "info",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log object and message 1`] = `
{
  "a": 1,
  "env": "test",
  "hostname": "host",
  "level": "info",
  "msg": "hello",
  "msgTemplateHash": "248bfa47",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log object and message with args 1`] = `
{
  "a": 1,
  "env": "test",
  "hostname": "host",
  "level": "info",
  "msg": "hello world",
  "msgTemplateHash": "3504eb44",
  "name": "name",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must log object with error level and undefined argument 1`] = `
{
  "env": "test",
  "hostname": "host",
  "level": "error",
  "name": "object value",
  "pid": 123456,
  "time": "2016-04-05T17:02:19.796Z",
  "version": "version",
}
`;

exports[`PinoLoggerOptionsBuilder must override level 1`] = `
{
  "base": {
    "env": "test",
    "hostname": "host",
    "name": "name",
    "pid": 123456,
    "version": "version",
  },
  "formatters": {
    "level": [Function],
  },
  "hooks": {
    "logMethod": [Function],
  },
  "level": "warn",
  "redact": [
    "req.headers.authorization",
    "err.config.headers['x-api-key']",
  ],
  "serializers": {
    "err": [Function],
    "req": [Function],
    "res": [Function],
  },
  "timestamp": [Function],
  "transport": undefined,
}
`;

exports[`PinoLoggerOptionsBuilder must override pretty print 1`] = `
{
  "base": {
    "env": "test",
    "hostname": "host",
    "name": "name",
    "pid": 123456,
    "version": "version",
  },
  "formatters": {
    "level": [Function],
  },
  "hooks": {
    "logMethod": [Function],
  },
  "level": "info",
  "redact": [
    "req.headers.authorization",
    "err.config.headers['x-api-key']",
  ],
  "serializers": {
    "err": [Function],
    "req": [Function],
    "res": [Function],
  },
  "timestamp": [Function],
  "transport": {
    "options": {
      "colorize": true,
      "ignore": "pid,hostname,name,version,env,errHash,msgTemplateHash",
      "translateTime": "SYS:STANDARD",
    },
    "target": "pino-pretty",
  },
}
`;

exports[`PinoLoggerOptionsBuilder must use process.env that starts with BUILD_ 1`] = `
{
  "base": {
    "commit": "eefc20",
    "env": "test",
    "hostname": "host",
    "name": "name",
    "pid": 123456,
    "version": "version",
  },
  "formatters": {
    "level": [Function],
  },
  "hooks": {
    "logMethod": [Function],
  },
  "level": "info",
  "redact": [
    "req.headers.authorization",
    "err.config.headers['x-api-key']",
  ],
  "serializers": {
    "err": [Function],
    "req": [Function],
    "res": [Function],
  },
  "timestamp": [Function],
  "transport": undefined,
}
`;

exports[`PinoLoggerOptionsBuilder must use process.env.CONFIG_ENV if exists 1`] = `
{
  "base": {
    "env": "dev",
    "hostname": "host",
    "name": "name",
    "pid": 123456,
    "version": "version",
  },
  "formatters": {
    "level": [Function],
  },
  "hooks": {
    "logMethod": [Function],
  },
  "level": "info",
  "redact": [
    "req.headers.authorization",
    "err.config.headers['x-api-key']",
  ],
  "serializers": {
    "err": [Function],
    "req": [Function],
    "res": [Function],
  },
  "timestamp": [Function],
  "transport": undefined,
}
`;
